Final (known) bug squash. Non-renaming styling work finished. Finished read-only modal work. Added row no longer will trigger off 'save and finish' info post unless reordering happens.

--- a/core/src/client/AuthenticationConfiguration/authenticationConfiguration.scss
+++ b/core/src/client/AuthenticationConfiguration/authenticationConfiguration.scss
@@ -159,6 +159,14 @@
   margin-left: 2px;
 }
 
+.viewOnlyFloatRight {
+  //float: right;
+  //marginRight: 285px;
+  //height: 200px;
+  margin-left: 265px;
+  //margin-right: 0;
+}
+
 .fileAttachmentNoImageText {
   font-size: smaller;
   color: #DCDCDC;
